
                                    Hatari
                                   --------
                                Release Notes

 Development version:
 --------------------

Emulation:
- ST video changes :
  - Handle 0 byte line by switching freq in STE mode
  - Use high res when ff8260 is set to 3
- CPU changes :
  - Fix a case when MFP's interrupt happens during the IACK sequence for HBL/VBL
- Fix READ CAPACITY command result for ACSI hard disk images
- FDC changes :
  - Add configurable RPM speed for each floppy drive and the possibility
    to turn each drive ON/OFF.
  - Correct timings, behaviour and status register for all commands
    when a drive is OFF or empty.
  - Rewrite the index pulse part and all the delays expressed as disk's revolution
  - Add support for the "Force Int on Index Pulse" command
- Videl change :
  - correct masking of the true color palette registers
- ACSI hard disk changes:
  - Fixed/improved READ CAPACITY and INQUIRY commands
  - Unsupported commands are now handled correctly
  - Now using fseeko() instead of fseek() for supporting large images

Emulator:
- SDL GUI:
  - Update clock speed in the status bar when changing bus speed
    in Falcon mode
  - In the floppy dialog, use a checkbox to enable/disable drives A and B
- Fix: Xbios(255) modified the given argument string
- New options --drive-a and --drive-b to enable/disable drives A and B
- New NatFeats command to invoke Hatari debugger from native program
- Allow GEMDOS, VDI and AES tracing to enabled without enabling
  also GEMDOS HD emulation or extended VDI mode
- Debugger:
  - Fix: release mouse in all cases where debugger can be invoked
  - Fix: DSP disassembler didn't in all cases show illegal opcodes correctly.
  - Fix: "symbols" command crash when it was used during bootup.
  - Fix: TOS and cartridge addresses weren't (with all TOS versions)
    in address order which asserted in profile data post-processor