@@ -669,6 +669,14 @@ for border removal).</p>
       <td>In Dragon screen planes are shifted in the upper part</td>
     </tr>
     <tr>
+      <td>PHF:
+      <a href="http://www.pouet.net/prod.php?which=7787">UMD 8730</a></td>
+      <td>1.8</td>
+      <td>The Ultimate Music Disc for Atari. This demo doesn't work in STF mode
+	  with Hatari &lt; 1.8, due to the non standard fading colors routine
+	  used at the start of the demo</td>
+    </tr>
+    <tr>
       <td>Reservoir Gods:
       <a href="http://pouet.net/prod.php?which=9711">Hallucinations</a></td>
       <td>before 1.0</td>
